# codex-desktop-linux

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix  install.sh
computer-use-linux/: Cargo.toml
docs/: linux-chronicle-skysight.md  native-setup.md  nix.md  record-and-replay-linux.md  troubleshooting.md  updater.md
launcher/: start.sh.template
nix/: home-manager-module.nix  nixos-module.nix
record-replay-linux/: Cargo.toml
record-replay-linux/src/: backends.rs  draft_prompt.rs  lib.rs  main.rs  manifest.rs  mcp.rs  ocr.rs  recorder.rs  runtime_status.rs  secure_fs.rs  skill.rs  skysight.rs  timeline.rs
record-replay-linux/tests/: backend_catalog_tests.rs  manifest_timeline_tests.rs  skills_import_fixtures.rs  skysight_tests.rs
record-replay-linux/tests/fixtures/: draft_prompt_valid.md  manifest_invalid_paths.json  manifest_valid.json  timeline.jsonl
record-replay-linux/tests/fixtures/skills/: README.md
record-replay-linux/tests/fixtures/skills/collision-tripwire/: SKILL.md
record-replay-linux/tests/fixtures/skills/collision-tripwire/scripts/: tripwire.sh
record-replay-linux/tests/fixtures/skills/desktop-act/: SKILL.md
record-replay-linux/tests/fixtures/skills/instruction-only/: SKILL.md
record-replay-linux/tests/fixtures/skills/platform-macos/: SKILL.md
record-replay-linux/tests/fixtures/skills/unsafe-symlink/: SKILL.md
scripts/: build-appimage.sh  build-deb.sh  build-pacman.sh  build-rpm.sh  install-deps.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js  workspace-root-open-targets-patch.test.js
(+91 files in other folders)
