[package]
name = "codex-record-replay-linux"
version = "0.1.0-linux-alpha1"
edition = "2021"

[[bin]]
name = "codex-record-replay-linux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
codex-computer-use-linux = { path = "../computer-use-linux" }
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt", "time"] }

[dev-dependencies]
tempfile = "3.27.0"
